[package]
name = "roaring_bitmap"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Roaring bitmap data structure implemented in Rust"
homepage = "https://github.com/arcticherman/roaring_bitmap"
documentation = "https://github.com/arcticherman/roaring_bitmap/blob/main/README.md"
repository = "https://github.com/arcticherman/roaring_bitmap"
readme = "README.md"
exclude = [
    "cargo_pulish.sh",
    ".gitignore",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
